--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,38 +11,44 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages-${{ github.ref }}"
-  cancel-in-progress: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      project-name: ${{ steps.extract-names.outputs.project-name }}
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci --prefer-offline --no-audit --progress=false
+        run: npm ci
 
-      - name: Build
-        # Adjust --base-href depending on whether this is a user/organization site ('/') or a project site ('/repo-name/')
-        run: npm run build -- --base-href=/
-
-      - name: Show build output (for debug)
+      - name: Extract repo and Angular project names
+        id: extract-names
+        shell: bash
         run: |
-          echo "Listing ./dist"
-          ls -la ./dist || true
-          echo "Listing expected site folder"
-          ls -la ./dist/daniel-seguin-website/browser || true
+          # REPO_NAME becomes only the repo part of owner/repo
+          echo "REPO_NAME=${GITHUB_REPOSITORY#*/}" >> $GITHUB_ENV
+          # PROJECT_NAME is the first project key in angular.json (matches angular.json structure)
+          PROJECT_NAME=$(node -e "console.log(Object.keys(require('./angular.json').projects)[0])")
+          echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
+          echo "project-name=$PROJECT_NAME" >> $GITHUB_OUTPUT
+          echo "Detected PROJECT_NAME=$PROJECT_NAME"
+          echo "Detected REPO_NAME=${GITHUB_REPOSITORY#*/}"
+
+      - name: Build (production) with correct base-href
+        env:
+          PROJECT_NAME: ${{ env.PROJECT_NAME }}
+          REPO_NAME: ${{ env.REPO_NAME }}
+        run: |
+          # Build production output; base-href ensures assets are resolved for repo-hosted pages
+          npm run build -- --configuration production --project "$PROJECT_NAME" --base-href "/$REPO_NAME/"
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -50,7 +56,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist/daniel-seguin-website/browser
+          path: ./dist/${{ steps.extract-names.outputs.project-name }}/browser
 
   deploy:
     environment:
