--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '22'
           cache: 'npm'
 
       - name: Install dependencies
@@ -56,8 +56,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Use the Angular dist output folder for the detected project
-          path: ./dist/${{ steps.extract-names.outputs.project-name }}
+          path: ./dist/${{ steps.extract-names.outputs.project-name }}/browser
 
   deploy:
     environment:
