--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
               "src/favicon.ico",
               "src/assets",
               "src/CNAME",
-              "src/.nojekyll"
+              "src/.nojekyll",
+              "src/404.html"
             ],
             "styles": [
               "src/styles.css"
